# rust-starter-template

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: audit.yml  lint.yml  run_tests.yml
cli/: Cargo.toml
cli/src/: lib.rs
configs/: default_config.toml  test_config.toml
configuration/: Cargo.toml
configuration/src/: app_config.rs  lib.rs
rt/: Cargo.toml
rt/src/: lib.rs
src/: main.rs
utils/: Cargo.toml
utils/src/: core_types.rs  lib.rs  logging.rs  panic.rs  project_info.rs
