[package]
name = "rust-starter-template"
description = "My take on a Rust project starter. It may not have everything, it may not be the best, but it is mine."
authors = ["Zachary Cauchi <zach.cauchi@hotmail.com>"]
version = "0.1.0-prealpha"
readme = "README.md"
repository = "https://github.com/zachary-cauchi/rust-starter-template"
license = "GPLv3"
edition = "2021"

[workspace]
members = ["utils", "configuration"]

[workspace.package]
authors = ["Zachary Cauchi <zach.cauchi@hotmail.com>"]
version = "0.1.0-prealpha"
repository = "https://github.com/zachary-cauchi/rust-starter-template"
license = "GPLv3"
license-file = "LICENSE"
edition = "2021"

[workspace.dependencies]
config = "0.13.4"
tracing = "0.1.40"
tokio = { version = "1.35.1", features = ["full"] }
configuration = { version = "0.1.0-prealpha", path = "configuration" }

[dependencies]
configuration = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = { workspace = true }
utils = { version = "0.1.0-prealpha", path = "utils" }
