[package]
name = "cli"
description = "Entrypoint to handle cli commands, configuration, and generating auto-completion docs."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.4.12", features = ["cargo", "derive", "wrap_help"] }
configuration.workspace = true
utils = { workspace = true }
