[package]
name = "configuration"
description = "Configuration module for loading and setting application-level configuration."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
config = { workspace = true }
lazy_static = "1.4.0"
parking_lot = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
utils = { workspace = true }
