[package]
name = "utils"
description = "Utility libraries too small to become their own package (such as logging, error handling, common types, etc)."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = "0.3.18"
