[package]
name = "utils"
description = "Utility libraries too small to become their own package (such as logging, error handling, common types, etc)."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { workspace = true }
thiserror = "1.0.52"
tracing = { workspace = true }
tracing-journald = { version = "0.3.0", optional = true }
tracing-subscriber = "0.3.18"

[features]
journald = ["dep:tracing-journald"]
